# goose

examples/duckdb-mcp/: README.md  pyproject.toml
examples/duckdb-mcp/src/duckdb_mcp/: __init__.py  __main__.py  server.py
