[project]
name = "duckdb-mcp"
version = "0.1.0"
description = "MCP Server for DuckDB queries"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "duckdb>=0.10.2",
    "mcp[cli]>=1.2.0",
]

[project.scripts]
duckdb-mcp = "duckdb_mcp:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
